--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,9 @@
 <% content_for :head do %>
   <%= javascript_pack_tag 'hello_vue' %>
 <% end %>
+
+<div class="mt-sm-5">
+  <a rel="nofollow" data-method="delete" href="/users/sign_out">
+    Logout
+  </a>
+</div>
