--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -6,12 +6,20 @@ body {
   height: 100%;
 }
 
-body {
+main {
+  background-color: #f5f5f5;
+  height: 100%;
+}
+
+main.main {
+  margin-top: 56px;
+}
+
+.devise {
   display: flex;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;;
 }
 
 .form-signin {
