--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,27 @@
   <%= javascript_pack_tag 'hello_vue' %>
 <% end %>
 
-<div class="mt-sm-5">
-  <a rel="nofollow" data-method="delete" href="/users/sign_out">
-    Logout
-  </a>
-</div>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Euro Typer</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <%= link_to("Home", root_path, class: "nav-link") %>
+          </li>
+          <li class="nav-item">
+            <%= link_to("Logout", destroy_user_session_path, class: "nav-link", method: :delete) %>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<main id="main" class="main">
+
+</main>
