--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,16 +1,20 @@
 @import "bootstrap";
 @import "./devise";
 
-html,
-body {
-  height: 100%;
-}
-
 main {
   background-color: #f5f5f5;
-  height: 100%;
+  height: calc(100vh - 56px);
 }
 
 main.main {
   margin-top: 56px;
+}
+
+.box {
+  background: #fff;
+  border-radius: 4px;
+  border-top: 4px solid #8795a1;
+  box-shadow: 3px 5px 10px rgba(#8795a1, .34);
+  margin: 40px 0 30px;
+  padding: 10px 30px;
 }
