--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,3 @@
-<% content_for :head do %>
-  <%= javascript_pack_tag 'hello_vue' %>
-<% end %>
-
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
@@ -15,6 +11,14 @@
             <%= link_to("Home", root_path, class: "nav-link") %>
           </li>
           <li class="nav-item">
+            <%= link_to("Edit profile", edit_user_registration_path, class: "nav-link") %>
+          </li>
+          <% if current_user.admin? %>
+            <li class="nav-item">
+              <%= link_to("Admin panel", admin_root_path, class: "nav-link") %>
+            </li>
+          <% end %>
+          <li class="nav-item">
             <%= link_to("Logout", destroy_user_session_path, class: "nav-link", method: :delete) %>
           </li>
         </ul>
@@ -22,7 +26,3 @@
     </div>
   </nav>
 </header>
-
-<main id="main" class="main">
-
-</main>
