--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import "./devise";
+@import "./skeleton_loading";
 
 main {
   background-color: #f5f5f5;
@@ -15,6 +16,11 @@ main.main {
   border-radius: 4px;
   border-top: 4px solid #8795a1;
   box-shadow: 3px 5px 10px rgba(#8795a1, .34);
-  margin: 40px 0 30px;
-  padding: 10px 30px;
+  padding: 10px 20px;
+
+  &-header {
+    text-align: center;
+    border-bottom: 1px solid #707375;
+    margin-bottom: 10px;
+  }
 }
