--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,14 @@
   <head>
     <title>Euro Typer</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="App to bet for EURO2021" >
     <meta charset="utf-8">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
     <%= yield :head %>
+    <%= stylesheet_link_tag 'application', media: 'all', defer: true %>
   </head>
 
   <body>
