--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <%= javascript_pack_tag 'application' %>
     <%= yield :head %>
-    <%= stylesheet_link_tag 'application', media: 'all', defer: true %>
+    <%= stylesheet_pack_tag 'application', media: 'all', defer: true %>
   </head>
 
   <body>
