--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,6 +2,8 @@
 @import "./devise";
 @import "./skeleton_loading";
 
+$include: "ge", "pl";
+
 main {
   background-color: #f5f5f5;
   height: calc(100vh - 56px);
@@ -30,6 +32,10 @@ main.main {
   display: inline-block;
 }
 
+.bi-big {
+  font-size: 200%;
+}
+
 @keyframes spin-animation {
   0% {
     transform: rotate(0deg);
@@ -41,4 +47,10 @@ main.main {
 
 .w-100px {
   width: 100px;
+}
+
+.centered-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
