--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -54,3 +54,13 @@ main.main {
   justify-content: center;
   align-items: center;
 }
+
+.ss-main {
+  .ss-single-selected {
+    height: 40px !important;
+
+    .placeholder {
+      margin: 6px;
+    }
+  }
+}
