--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,19 +6,31 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0 w-100">
           <li class="nav-item">
             <%= link_to("Home", root_path, class: "nav-link") %>
           </li>
           <li class="nav-item">
             <%= link_to("Edit profile", edit_user_registration_path, class: "nav-link") %>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Match Days
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <% MatchDay.past.each do |match_day| %>
+                <li>
+                  <%= link_to(match_day.display_name, match_day_path(match_day), class: "dropdown-item") %>
+                </li>
+              <% end %>
+            </ul>
+          </li>
           <% if current_user.admin? %>
             <li class="nav-item">
               <%= link_to("Admin panel", admin_root_path, class: "nav-link") %>
             </li>
           <% end %>
-          <li class="nav-item">
+          <li class="nav-item" style="margin: 0 0 0 auto !important;">
             <%= link_to("Logout", destroy_user_session_path, class: "nav-link", method: :delete) %>
           </li>
         </ul>
