Fix match day table

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -64,3 +64,16 @@ main.main {
     }
   }
 }
+
+table {
+  .no-break {
+    white-space: nowrap;
+    background-color: white;
+  }
+
+  .sticky {
+    left: 0;
+    position: sticky;
+    z-index: 2;
+  }
+}
