--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -6,7 +6,7 @@ $include: "ge", "pl";
 
 main {
   background-color: #f5f5f5;
-  height: calc(100vh - 56px);
+  min-height: calc(100vh - 56px);
 }
 
 main.main {
