--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,19 @@
               <% end %>
             </ul>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Round stats
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <% Round.order(id: :asc).each do |round| %>
+                <li><%= link_to(round.name, round_path(round), class: "dropdown-item") %></li>
+              <% end %>
+              <li><hr class="dropdown-divider"></li>
+              <li><%= link_to("Group stage", group_rounds_path, class: "dropdown-item") %></li>
+              <li><%= link_to("Knockout stage", knockout_rounds_path, class: "dropdown-item") %></li>
+            </ul>
+          </li>
           <% if current_user.admin? %>
             <li class="nav-item">
               <%= link_to("Admin panel", admin_root_path, class: "nav-link") %>
