--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Euro Typer</title>
+    <title>Mundial 2022 Typer</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="App to bet for EURO2021" >
+    <meta name="description" content="App to bet for World Cup Qatar 2022" >
     <meta charset="utf-8">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
