--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,20 @@
-<h2>Change your password</h2>
+<main class="devise">
+  <div class="form-signin">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.hidden_field :reset_password_token %>
+      <% if alert %>
+        <div class="alert alert-danger" role="alert"><%= alert %></div>
+      <% end %>
+      <h1 class="h3 mb-3 fw-normal">Change your password</h1>
+      
+      <%= f.label :password, class: "visually-hidden" %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder:  "New password" %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+      <%= f.label :password_confirmation,class: "visually-hidden" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder:  "Confirm new password" %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <button class="w-100 btn btn-lg btn-primary my-3" type="submit">Change my password</button>
+      <%= render "devise/shared/links" %>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</main>
